--- a/scss/globals/_variables.scss
+++ b/scss/globals/_variables.scss
@@ -6,10 +6,11 @@ $colors: (
   ),
 
   text: (
-    "primary":   #555,
-    "secondary": #666,
-    "heading":   #222,
-    "ui":        white
+    "primary":   #333,
+    "secondary": #4c4c4c,
+    "heading":   #111,
+    "link":      #9edc94,
+    "ui":        #ddd
   ),
 
   background: (
