--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -20,7 +20,8 @@ kbd {
     text-shadow:0 1px 0 #fff;
     line-height:1.4;
     white-space:nowrap;
-    text-decoration: none!important;
+    text-decoration: none;
+    vertical-align: text-bottom;
 }
 
 
