--- a/scss/globals/_variables.scss
+++ b/scss/globals/_variables.scss
@@ -14,9 +14,8 @@ $colors: (
   ),
 
   background: (
-    "dark":  #282E31,
-    "light": #f5f5f5,
-    "body":  white
+    "secondary":  #282E31,
+    "primary": #f5f5f5
   ),
 
   state: (
