--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -3,7 +3,7 @@ html,
 body,
 * {
     font-family: Helvetica, Arial, Sans-Serif;
-    font-size: 16px;
+    font-size: $font-size;
 }
 
 * {
@@ -15,21 +15,68 @@ body,
     }
 }
 
+/* Type Base */
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-weight: bold;
+    color: getColor(text, heading);
+}
+
+h1 {
+    font-size: 28px;
+    margin-bottom: 18px;
+}
+
+h2 {
+    font-size: 26px;
+    margin-bottom: 16px;
+}
+
+h3 {
+    font-size: 24px;
+    margin-bottom: 14px;
+}
+
+h4 {
+    font-size: 22px;
+    margin-bottom: 12px;
+}
+
+h5 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+p {
+    color: getColor(text, primary);
+    margin-bottom: 8px;
+    line-height: 1.25;
+    
+    small {
+        color: getColor(text, secondary);
+        font-size: 80%;
+    }
+}
+
 kbd {
-    padding:0.1em 0.6em;
-    border:1px solid #ccc;
-    font-size:11px;
-    font-family:Arial,Helvetica,sans-serif;
-    background-color:#f7f7f7;
-    color:#333;
-    box-shadow:0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 2px #ffffff inset;
-    border-radius:3px;
-    display:inline-block;
-    margin:0 0.1em;
-    text-shadow:0 1px 0 #fff;
-    line-height:1.4;
-    white-space:nowrap;
-    text-decoration: none!important;
+    padding: .1em .6em;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    font-family: Arial,Helvetica,sans-serif;
+    background-color: #f7f7f7;
+    color: #333;
+    box-shadow: 0 1px 0px rgba(black, .2),0 0 0 2px #ffffff inset;
+    border-radius: 3px;
+    display: inline-block;
+    text-shadow: 0 1px 0 #fff;
+    white-space: nowrap;
+    text-decoration: none !important;
+    vertical-align: baseline;
+    line-height: 1.25;
 }
 
 
@@ -53,6 +100,12 @@ kbd {
         }
     }
     &--ui {
+        background: getColor(background, dark);
         color: getColor(text, ui);
     }
+}
+
+.blockline {
+    display: block;
+    line-height: 2;
 }
