--- a/scss/globals/_variables.scss
+++ b/scss/globals/_variables.scss
@@ -1,70 +1,74 @@
 $colors: (
-  base: (
-    "primary":   #4591aa,
-    "selection": #d6d6d6,
-    "lines":     #e0e0e0
-  ),
+    core: (
+        "black": #000,
+        "white": #fff
+    ),
+    base: (
+        "primary":   #4591aa,
+        "selection": #d6d6d6,
+        "lines":     #e0e0e0
+    ),
 
-  text: (
-    "primary":   #333,
-    "secondary": #4c4c4c,
-    "heading":   #111,
-    "link":      #9edc94,
-    "ui":        #ddd
-  ),
+    text: (
+        "primary":   #333,
+        "secondary": #4c4c4c,
+        "heading":   #111,
+        "link":      #9edc94,
+        "ui":        #ddd
+    ),
 
-  background: (
-    "secondary":  #282E31,
-    "primary": #f5f5f5
-  ),
+    background: (
+        "secondary":  #282E31,
+        "primary": #f5f5f5
+    ),
 
-  state: (
-    "muted":   #aaa,
-    "primary": #4591aa,
-    "success": #45ca69,
-    "warning": #ffb800,
-    "error":   #ca4829
-  ),
+    state: (
+        "muted":   #aaa,
+        "primary": #4591aa,
+        "success": #45ca69,
+        "warning": #ffb800,
+        "error":   #ca4829
+    ),
 
-  blue: (
-    "darker":  #495b61,
-    "dark":    #447281,
-    "base":    #4591aa,
-    "light":   #5ab0cc,
-    "lighter": #74cbe8
-  ),
+    blue: (
+        "darker":  #495b61,
+        "dark":    #447281,
+        "base":    #4591aa,
+        "light":   #5ab0cc,
+        "lighter": #74cbe8
+    ),
 
-  green: (
-    "darker":  #3b6e6e,
-    "dark":    #3b8686,
-    "base":    #37a1a1,
-    "light":   #2dbaba,
-    "lighter": #69d1d1
-  ),
+    green: (
+        "darker":  #3b6e6e,
+        "dark":    #3b8686,
+        "base":    #37a1a1,
+        "light":   #2dbaba,
+        "lighter": #69d1d1
+    ),
 
-  cream: (
-    "darker":  #c47858,
-    "dark":    #e29372,
-    "base":    #ecac91,
-    "light":   #f9c2ab,
-    "lighter": #fdd5c3
-  ),
+    cream: (
+        "darker":  #c47858,
+        "dark":    #e29372,
+        "base":    #ecac91,
+        "light":   #f9c2ab,
+        "lighter": #fdd5c3
+    ),
 
-  red: (
-    "darker":  #653131,
-    "dark":    #b73333,
-    "base":    #da3c3c,
-    "light":   #f25a5a,
-    "lighter": #fa8181
-  ),
+    red: (
+        "darker":  #653131,
+        "dark":    #b73333,
+        "base":    #da3c3c,
+        "light":   #f25a5a,
+        "lighter": #fa8181
+    ),
 
-  gray: (
-    "darker":  #333333,
-    "dark":    #4d4d4d,
-    "base":    #666666,
-    "light":   #808080,
-    "lighter": #999999
-  )
+    gray: (
+        "darker":  #333333,
+        "dark":    #4d4d4d,
+        "base":    #666666,
+        "light":   #808080,
+        "lighter": #999999
+    )
 ) !default;
 
 /* Device Breakpoints */
@@ -73,8 +77,10 @@ $mobile-portrait-width: 300px !global;
 $mobile-landscape-width: 420px !global; 
 $mobile-fluid-width: 100%; 
 
+
 $grid-max-width: 1000px;
 
+/* Settings */
 $use-rem: false;
 $use-em: false;
 $use-percent: false;
@@ -85,10 +91,17 @@ $prefix-for-microsoft: false;
 $prefix-for-opera:     false;
 $prefix-for-spec:      false;
 
-$base-col-width: 40px !global; // The width of each columns
-$base-gutter-width: 20px !global; // The space between columns
-$base-col-count: 16 !global; // The number of columns
-$new-grid-width: 80%; // the new grid with set within the 550px breakpoint
+// The width of each columns
+$base-col-width: 40px !global;
+
+// The space between columns
+$base-gutter-width: 20px !global; 
+
+// The number of columns
+$base-col-count: 12 !global;
+
+// the new grid with set within the 550px breakpoint
+$new-grid-width: 80%;
 
 // Default overrides for new theme
 $is-fluid: true; // Change to true to enable the fluid grid
