--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -15,10 +15,6 @@ body,
     }
     
     color: getColor(text, primary);
-    
-    &.light--text {
-        color: getColor(core, white);
-    }
 }
 
 /* Type Base */
@@ -30,6 +26,10 @@ h4,
 h5 {
     font-weight: bold;
     color: getColor(text, heading);
+    
+    &.-light {
+        color: getColor(core, white);
+    }
 }
 
 h1 {
