--- a/scss/components/_reset.scss
+++ b/scss/components/_reset.scss
@@ -26,18 +26,48 @@ blockquote, q {
 blockquote {
     &:before, &:after {
         content: '';
-        content: none; 
+        content: none;
     }
 }
 
 q {
     &:before, &:after {
         content: '';
-        content: none; 
+        content: none;
     }
 }
 
 table {
     border-collapse: collapse;
-    border-spacing: 0; 
+    border-spacing: 0;
+}
+
+.content {
+    &--left {
+        text-align: left;
+
+        &.-flex {
+            justify-content: flex-start;
+        }
+    }
+
+    &--right {
+        text-align: right;
+
+        &.-flex {
+            justify-content: flex-end;
+        }
+    }
+
+    &--center {
+        text-align: center;
+
+        &.-flex {
+            justify-content: center;
+        }
+    }
+
+    &.-flex {
+        display: flex;
+    }
 }
