Tidying things up

--- a/scss/globals/_variables.scss
+++ b/scss/globals/_variables.scss
@@ -1,12 +1,10 @@
 $colors: (
-    core: (
-        "black": #000,
-        "white": #fff
-    ),
     base: (
         "primary":   #4591aa,
         "selection": #d6d6d6,
-        "lines":     #e0e0e0
+        "lines":     #e0e0e0,
+        "dark": #000,
+        "light": #fff
     ),
 
     text: (
