--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -26,10 +26,6 @@ h4,
 h5 {
     font-weight: bold;
     color: getColor(text, heading);
-    
-    &.-light {
-        color: getColor(core, white);
-    }
 }
 
 h1 {
@@ -109,7 +105,6 @@ kbd {
         background: getColor(background, dark);
         color: getColor(text, ui);
     }
-
     &--success {
         color: getColor(state, success);
     }
@@ -118,6 +113,9 @@ kbd {
     }
     &--error {
         color: getColor(state, error);
+    }
+    &--white {
+        color: getColor(base, light);
     }
 }
 
