Tidied up index

--- a/scss/globals/_variables.scss
+++ b/scss/globals/_variables.scss
@@ -17,7 +17,7 @@ $colors: (
 
     background: (
         "secondary":  #282E31,
-        "primary": #f5f5f5
+        "primary": #fff
     ),
 
     state: (
