--- a/scss/components/_reset.scss
+++ b/scss/components/_reset.scss
@@ -13,6 +13,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
     line-height: 1;
+    background-color: #f9f9f9;
 }
 
 ol, ul {
