--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -141,3 +141,11 @@ kbd {
     display: block;
     line-height: 2;
 }
+
+code {
+    padding: .2rem .4rem;
+    font-size: 90%;
+    color: #bd4147;
+    background-color: #f7f7f9;
+    border-radius: .25rem;
+}
