--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,3 +1,50 @@
+/* Device Breakpoints */
+$tablet-width: 768px !global;
+$mobile-portrait-width: 300px !global;
+$mobile-landscape-width: 420px !global;
+$mobile-fluid-width: 100%;
+$grid-max-width: 1000px;
+/* Settings */
+$use-rem: false;
+$use-em: false;
+$use-percent: false;
+$prefix-for-webkit:    false;
+$prefix-for-mozilla:   false;
+$prefix-for-microsoft: false;
+$prefix-for-opera:     false;
+$prefix-for-spec:      false;
+// The width of each columns
+$base-col-width: 40px !global;
+// The space between columns
+$base-gutter-width: 20px !global;
+// The number of columns
+$base-col-count: 12 !global;
+// the new grid with set within the 550px breakpoint
+$new-grid-width: 80%;
+// Default overrides for new theme
+$is-fluid: true; // Change to true to enable the fluid grid
+$use-global-border-box: false; // Change to true the enable global border-box
+$link-color: #9edc94; // default link color
+$link-hover: darken(#9edc94, 15); // default link color on :hover
+$link-decoration: underline; // default link decoration
+$base-width: if($is-fluid, 100%, ($base-col-width + $base-gutter-width) * $base-col-count);
+$heading-family: $font-family; // default heading (h1-h6) font
+$heading-color: $font-color; // default heading (h1-h6) color
+$heading-weight: 300; // sets the weight of the heading text
+$form-font: $font-family; // default form font
+$button-color: #555;
+$button-weight: 600;
+$button-font-uppercase: true;
+$button-border-color: #bbb;
+$grid-max-width: 960px;
+$base-col-count: 12;
+$base-col-width: 60px;
+$use-new-grid: true;
+$font-weight: 400; // sets the font weight
+$form-font: $font-family !global; // default form font
+$base-font-size: $font-size;
+
+
 /* Base */
 .container {
 	position: relative;
