--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -2,7 +2,7 @@
 html,
 body,
 * {
-    font-family: Helvetica, Arial, Sans-Serif;
+    font-family: $font-family;
     font-size: $font-size;
 }
 
@@ -24,8 +24,9 @@ h2,
 h3,
 h4,
 h5 {
-    font-weight: bold;
+    font-weight: $heading-weight;
     color: getColor(text, heading);
+    font-family: $heading-family;
 }
 
 h1 {
@@ -57,6 +58,7 @@ p {
     color: getColor(text, primary);
     margin-bottom: 8px;
     line-height: 1.25;
+    font-weight: $font-weight;
     
     small {
         color: getColor(text, secondary);
