--- a/scss/emerald.scss
+++ b/scss/emerald.scss
@@ -1,5 +1,7 @@
 @charset 'UTF-8';
 
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i';
+
 @import 'globals/functions';
 @import 'globals/mixins';
 @import 'globals/variables';
