--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -11,12 +11,12 @@ $prefix-for-mozilla: false;
 $prefix-for-microsoft: false;
 $prefix-for-opera: false;
 $prefix-for-spec: false;
-$base-col-width: 40px !global;
+$base-col-width: 60px !global;
 $base-gutter-width: 20px !global;
 $base-col-count: 12 !global;
 $new-grid-width: 80%;
 $is-fluid: true; 
-$use-global-border-box: false; 
+$use-global-border-box: true; 
 $link-color: #9edc94; 
 $link-hover: darken(#9edc94, 15); 
 $link-decoration: underline; 
@@ -28,7 +28,6 @@ $button-color: #555;
 $button-weight: 600;
 $button-font-uppercase: true;
 $button-border-color: #bbb;
-$grid-max-width: 960px;
 $base-col-count: 12;
 $base-col-width: 60px;
 $use-new-grid: true;
