--- a/scss/globals/_variables.scss
+++ b/scss/globals/_variables.scss
@@ -72,9 +72,11 @@ $colors: (
 
 $font-size: 16px !global;
 $font-family: 'Open Sans', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif !global;
-$font-weight: 400; 
+$font-weight: 400;
 $font-color: #333 !global; 
 
 $heading-family: 'Roboto', sans-serif !global;
 $heading-weight: 300 !global;
 $heading-color: #111 !global;
+
+$grid-max-width: 960px;
