updated content alignment

--- a/scss/components/_reset.scss
+++ b/scss/components/_reset.scss
@@ -46,7 +46,8 @@ table {
 .content {
     &--left {
         text-align: left;
-
+        float: left;
+        
         &.-flex {
             justify-content: flex-start;
         }
@@ -54,7 +55,8 @@ table {
 
     &--right {
         text-align: right;
-
+        float: right;
+        
         &.-flex {
             justify-content: flex-end;
         }
@@ -62,13 +64,14 @@ table {
 
     &--center {
         text-align: center;
-
+        float: none;
+        
         &.-flex {
             justify-content: center;
         }
     }
+}
 
-    &.-flex {
-        display: flex;
-    }
+.-flex {
+    display: flex;
 }
