--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -138,6 +138,64 @@ kbd {
     }
 }
 
+.button {
+
+}
+
+.button {
+    &--block {
+        border-top-right-radius: 0px;
+        border-top-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+        border-bottom-left-radius: 0px;
+    }
+    &--pill {
+        border-radius: 16px;
+    }
+    &--rightcurve {
+        border-top-right-radius: 16px;
+        border-bottom-right-radius: 16px;
+    }
+    &--leftcurve {
+        border-top-left-radius: 16px;
+        border-bottom-left-radius: 16px;
+    }
+    &--topcurve {
+        border-top-left-radius: 16px;
+        border-top-right-radius: 16px;
+    }
+    &--bottomcurve {
+        border-bottom-left-radius: 16px;
+        border-bottom-right-radius: 16px;
+    }
+    &--border {
+        &--primarythick {
+            border: 6px solid getColor(background, primary);
+        }
+        &--primarythin {
+            border: 1px solid getColor(background, primary);
+        }
+        &--secondarythick {
+            border: 6px solid getColor(background, secondary);
+        }
+        &--secondarythin {
+            border: 1px solid getColor(background, secondary);
+        }
+    }
+
+    &--block,&--pill,&--rightcurve,&--leftcurve,&--topcurve,&--bottomcurve {
+        text-decoration:none;
+        font-size:16px;
+        font-weight:lighter;
+        padding:0 15px;
+        line-height:32px;
+        height: auto;
+        display:inline-block;
+        clear: both;
+        text-align:center;
+    }
+}
+
 .blockline {
     display: block;
     line-height: 2;
