--- a/scss/components/_reset.scss
+++ b/scss/components/_reset.scss
@@ -65,6 +65,7 @@ table {
     &--center {
         text-align: center;
         float: none;
+        margin: 0 auto;
 
         &.-flex {
             justify-content: center;
